@@ -3,7 +3,8 @@
 + Table.add() now returns row index of the added row.
 ! BREAKING CHANGE: Group() now takes a new OpenMode parameter and not a boolean. 
   It now supports multiple ways to open a group. (ReadOnly, ReadWrite, WriteNoCreate)
-+ Added Group.Commit()  
++ Added Group.commit()
++ Added Group.equals()
 
 04-August-2013:
 ===============
